--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #ffffff;
 }
 
-.App-link {
-  color: #61dafb;
+.hero {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 55;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#image {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  overflow: hidden;
+  filter: brightness(40%);
+}
+
+#button {
+  width: 2em;
+  height: 2em;
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  background-size: cover;
+  text-align: center;
+  color: #ffffff;
+  font-size: 2rem;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 0 10px #7b7b7b;
+  background-color: rgb(44, 44, 44);
+  outline: none;
+}
+#button:hover {
+  background-color: rgb(68, 68, 68);
+}
+
+#content {
+  min-height: 60vh;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  text-align: center;
+  max-width: 60em;
+  margin: 0 auto;
 }
